--- a/src/components/Sections/Bio.css
+++ b/src/components/Sections/Bio.css
@@ -3,8 +3,44 @@
     height: 100vh;
 }
 
-#bio h1 {
-    padding-top: 200px;
+.container {
+    max-width: 80%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.main-h1 {
     color: white;
     font-size: 80px;
+}
+
+.name-h1 {
+    font-size: 3.5rem;
+    color: white;
+}
+
+.title-h2 {
+    font-size: 2.5rem;
+    font-weight: 400;
+    color: white;
+}
+
+.me-image {
+    display: inline-block;
+    position: relative;
+    width: 200px;
+    height: 200px;
+    /* border-radius: 50%; */
+}
+
+.me-image img {
+    width: auto;
+    height: 100%;
+    border-radius: 10px;
+    border: 3px solid black;
+}
+
+.desc-p {
+    font-size: 1.5rem;
+    color: white;
 }
