--- a/src/components/Sections/Bio.css
+++ b/src/components/Sections/Bio.css
@@ -1,45 +1,52 @@
 #bio section {
-    background: linear-gradient(to bottom, #0b576f, #095b72, #076075, #076478, #08697a);
-    height: 100vh;
+  background: linear-gradient(
+    to bottom,
+    #0b576f,
+    #095b72,
+    #076075,
+    #076478,
+    #08697a
+  );
+  height: 100vh;
 }
 
 .container {
-    max-width: 60%;
-    margin: 0 auto;
-    text-align: center;
+  max-width: 60%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .main-h1 {
-    color: white;
-    font-size: 80px;
+  color: white;
+  font-size: 80px;
 }
 
 .name-h1 {
-    font-size: 3.5rem;
-    color: white;
+  font-size: 3.5rem;
+  color: white;
 }
 
 .title-h2 {
-    font-size: 2.5rem;
-    font-weight: 400;
-    color: white;
+  font-size: 2.5rem;
+  font-weight: 400;
+  color: white;
 }
 
 .me-image {
-    display: inline-block;
-    position: relative;
-    width: 200px;
-    height: 200px;
+  display: inline-block;
+  position: relative;
+  width: 200px;
+  height: 200px;
 }
 
 .me-image img {
-    width: auto;
-    height: 100%;
-    border-radius: 10px;
-    border: 3px solid black;
+  width: auto;
+  height: 100%;
+  border-radius: 10px;
+  border: 3px solid black;
 }
 
 .desc-p {
-    font-size: 1.5rem;
-    color: white;
+  font-size: 1.5rem;
+  color: white;
 }
